[package]
name = "bevy-hikari"
version = "0.1.11"
edition = "2021"
authors = ["Zhenyuan Zhang <cryscan@umich.edu>"]
license = "MIT OR Apache-2.0"
description = "Voxel Cone Tracing Global Illumination for the Bevy Engine."
homepage = "https://github.com/cryscan/bevy-hikari"
repository = "https://github.com/cryscan/bevy-hikari"
keywords = ["gamedev", "graphics", "bevy", "3d"]
categories = ["game-engines", "rendering"]
exclude = ["assets"]

[dependencies]
bevy = { version = "0.8.0-dev", git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_pbr"
] }
bevy_utils = { version = "0.8.0-dev",  git = "https://github.com/bevyengine/bevy" }
crevice = { version = "0.10" }
wgpu = { version = "0.12.0", features = ["spirv"] }
itertools = "0.10"

[dev-dependencies]
bevy = { version = "0.8.0-dev", git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_gltf",
    "jpeg",
    "png",
    "x11"
] }
bevy_full_throttle = { git = "https://github.com/lightsoutgames/bevy_full_throttle" }
bevy_flycam = "0.7"
smooth-bevy-cameras = "0.3"
